view: lava  - Cleared spacing issues in mobile view.  - Added {NEWS_IMAGE} placeholder in headlines.html file.
git-svn-id: http://svn.contrexxlabs.com/contrexx/trunk@33757 5ce06e5d-2b28-0410-aa6a-b3cd9cf52d8a

--- a/themes/lava/modules.css
+++ b/themes/lava/modules.css
@@ -148,6 +148,7 @@ div.row2 {
     clear: none !important;
     margin: 0;
     padding: 0;
+    margin-bottom: 10px;
 }
 #captcha #coreCaptchaLabel {
     float: left;
@@ -1231,6 +1232,7 @@ div.row2 {
     display: inline-block;
     height: auto !important;
     margin: 0;
+    min-height: 37px;
 }
 #shop div.price s {
     padding: 0 5px 0 0;
@@ -2444,9 +2446,6 @@ dl.data_module img {
     margin-right: 0;
     margin-left: 0;
 }
-#checkout form select {
-    width: 420px !important;
-}
 #checkout form input.label,
 #checkout form select.label,
 #checkout form textarea.label {
@@ -2461,10 +2460,6 @@ dl.data_module img {
     float: left;
     width: 264px;
     margin-right: 10px;
-}
-#checkout form select#invoice_currency {
-    float: left;
-    width: 120px !important;
 }
 #checkout form input#contact_postcode  {
     float: left;
@@ -2675,7 +2670,6 @@ input[name="bsubmit"] {
     padding-top: 26px;
 }
 #searchfield p {
-    width: 33%;
     margin-right: 10px;
 }
 input[name="recipient_save"] {
@@ -2928,7 +2922,7 @@ select[name="cid"] {
 #forum div.anchor, #forum div.anchor-polo {
     margin-bottom: 15px;
 }
-.breadcrumb {
+.breadcrumb, .news {
     float: left;
     width: 100%;
 }
@@ -2950,4 +2944,17 @@ input#feedbutton {
 }
 .char_list a {
     word-wrap: break-word;
+}
+body .btn {text-shadow: none;}
+.questionBlock_button {
+    padding: 10px;
+}
+a.out {
+    word-wrap: break-word;
+}
+#ecardSend input {
+    margin: 10px 0;
+}
+.blog-post h2 {
+    color: #626C72;
 }
